alb.tf
resource "aws_lb" "app_alb" {
  name               = "app-load-balancer"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb_sg.id]
  subnets            = [for subnet in aws_subnet.public_subnets : subnet.id]  # Fetch all subnet IDs

  enable_deletion_protection = false

  tags = {
    Name = "AppALB"
  }
}
